# TNBC_TCGA-DEG-and-KM-survial-analysis_python

./: .gitignore  README.md  pyproject.toml
main/: TNBC_DEG_KM_analysis.py  TNBC_PIPELINE_DESIGN.md  TNBC_PIPELINE_USAGE.md  download_brca_star_counts.py
source/ptcgabiolinks/: __init__.py  barcode.py  client.py  download.py  models.py  prepare.py  query.py
tests/: test_download.py  test_prepare.py  test_query.py  test_tnbc_deg_pipeline.py  test_tools.py
tools/: __init__.py  tools.py
