[project]
name = "tnbc_tcga_project"
version = "0.1.0"
description = "Python port of the core TCGAbiolinks GDC query, download, and prepare workflow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tnbc_tcga_project", "tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
